@@ -1782,6 +1782,65 @@ operator|.
 name|getCurrentAppAttempt
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+operator|!
+name|rmApp
+operator|.
+name|getApplicationSubmissionContext
+argument_list|()
+operator|.
+name|getKeepContainersAcrossApplicationAttempts
+argument_list|()
+condition|)
+block|{
+comment|// Do not recover containers for stopped attempt or previous attempt.
+if|if
+condition|(
+name|schedulerAttempt
+operator|.
+name|isStopped
+argument_list|()
+operator|||
+operator|!
+name|schedulerAttempt
+operator|.
+name|getApplicationAttemptId
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|container
+operator|.
+name|getContainerId
+argument_list|()
+operator|.
+name|getApplicationAttemptId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Skip recovering container "
+operator|+
+name|container
+operator|+
+literal|" for already stopped attempt."
+argument_list|)
+expr_stmt|;
+name|killOrphanContainerOnNode
+argument_list|(
+name|nm
+argument_list|,
+name|container
+argument_list|)
+expr_stmt|;
+continue|continue;
+block|}
+block|}
 comment|// create container
 name|RMContainer
 name|rmContainer
