@@ -3678,6 +3678,91 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|rm2
+operator|.
+name|waitForNewAMToLaunchAndRegister
+argument_list|(
+name|app1
+operator|.
+name|getApplicationId
+argument_list|()
+argument_list|,
+literal|2
+argument_list|,
+name|nm1
+argument_list|)
+expr_stmt|;
+name|MockNM
+name|nm2
+init|=
+operator|new
+name|MockNM
+argument_list|(
+literal|"127.1.1.1:4321"
+argument_list|,
+literal|8192
+argument_list|,
+name|rm2
+operator|.
+name|getResourceTrackerService
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|NMContainerStatus
+name|previousAttemptContainer
+init|=
+name|TestRMRestart
+operator|.
+name|createNMContainerStatus
+argument_list|(
+name|am1
+operator|.
+name|getApplicationAttemptId
+argument_list|()
+argument_list|,
+literal|4
+argument_list|,
+name|ContainerState
+operator|.
+name|RUNNING
+argument_list|)
+decl_stmt|;
+name|nm2
+operator|.
+name|registerNode
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|previousAttemptContainer
+argument_list|)
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+comment|// Wait for RM to settle down on recovering containers;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|3000
+argument_list|)
+expr_stmt|;
+comment|// check containers from previous failed attempt should not be recovered.
+name|assertNull
+argument_list|(
+name|scheduler
+operator|.
+name|getRMContainer
+argument_list|(
+name|previousAttemptContainer
+operator|.
+name|getContainerId
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 comment|// Apps already completed before RM restart. Restarted RM scheduler should not
 comment|// recover containers for completed apps.
